# sagedoom

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  vcpkg.json
include/: str_ext.h
include/doom/: doom.h  error.h  file_util.h  framerate.h  game_mode.h  gl.h  intermission.h  intermission_state.h  iwad.h  key_cb.h  math.h  misc.h  mouse_cb.h  movement.h  parm.h  print.h  render.h  resolution.h  state.h  types.h  version.h  video.h  wad.h  wad_types.h  zone.h  zone_types.h
include/doom/renderer/: types.h
include/doom/statusbar/: lib.h  types.h
include/util/: maybe.h
src/: args.rs  doom.c  error.c  file_util.c  intermission.c  iwad.c  key_cb.c  main.c  main.rs  math.c  mouse_cb.c  movement.c  parm.c  print.c  render.c  screen.rs  state.rs  status_bar.rs  str_ext.c  video.c  video.rs  wad.c  wad.rs  zone.c
src/statusbar/: lib.c
third/glad/: CMakeLists.txt
third/glad/include/glad/: glad.h
third/glad/src/: glad.c
third/str/: CMakeLists.txt
